--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Winter: #005393
 
                 $("html").css("background-color", "#EBA52B");
 
-                alert("Temperatures are higher than usual for obvious reasons!");
+                alert("It is very hot!");
               }
 
               else if (season == "Fall"){
@@ -134,7 +134,7 @@ Winter: #005393
 
                 $("html").css("background-color", "#A81124");
 
-                alert("We're losing daylight, enjoy it while it lasts.");
+                alert("We are in fall season, lets enjoy Halloween.");
               }
 
               else if (season == "Winter"){
@@ -144,7 +144,7 @@ Winter: #005393
 
                 $("html").css("background-color", "#005393");
 
-                alert("Wow, it's freezing.");
+                alert("Oh my God,It is freezing!");
               }
               
               else {
@@ -154,7 +154,7 @@ Winter: #005393
 
                 $("html").css("background-color", "#ccc");
 
-                alert("You clicked on the Default page, BORING!");
+                alert("You clicked on the Default page, Great!");
               }
            
          //alert("I'm clicked!");
